# YetAnotherVulkanMod

./: .gitignore  .gitmodules  1.18.2-dev-note.md  CMakeLists.txt  LICENSE  README.md  build.gradle  generate.cmd  gradle.properties  settings.gradle
deprecated/main/cpp/: YAV.cpp  jnijavacpp.cpp
deprecated/main/java/org/helixd2s/yavulkanmod/: Initializer.java
deprecated/main/java/org/helixd2s/yavulkanmod/alter/header/: CreateInfo.java
deprecated/main/java/org/helixd2s/yavulkanmod/alter/objects/: BaseObj.java  ContextObj.java  DeviceObj.java  GeometryLevelObj.java  MemoryAllocatorObj.java  MemoryAllocatorVma.java
deprecated/main/java/org/helixd2s/yavulkanmod/mixin/blaze3d/: MTextureUtils.java
deprecated/main/java/org/helixd2s/yavulkanmod/mixin/gl/: MVertexBuffer.java
deprecated/main/java/org/helixd2s/yavulkanmod/mixin/render/: MBufferBuilder.java  MVertexFormats.java  MWorldRenderer.java
deprecated/main/java/org/helixd2s/yavulkanmod/mixin/texture/: MResourceTexture.java  MTextureManager.java
deprecated/main/java/org/helixd2s/yavulkanmod/mixin/util/: MVector4f.kt
deprecated/main/resources/: fabric.mod.json  yavulkanmod.mixins.json
devnotes/: 1.18.2-dev-note.md
generator/: lwjgl-generator.js  org.lwjgl3.json  readme.md
include/: Alter  cmake_pch.cxx  cmake_pch.hxx  interval-tree
include/vulkan/: vk_icd.h  vk_layer.h  vk_platform.h  vk_sdk_platform.h  vulkan.h  vulkan.hpp  vulkan_android.h  vulkan_beta.h  vulkan_core.h  vulkan_directfb.h  vulkan_enums.hpp  vulkan_format_traits.hpp  vulkan_fuchsia.h  vulkan_funcs.hpp  vulkan_ggp.h  vulkan_handles.hpp  vulkan_hash.hpp  vulkan_ios.h  vulkan_macos.h  vulkan_metal.h  vulkan_raii.hpp  vulkan_screen.h  vulkan_structs.hpp  vulkan_vi.h  vulkan_wayland.h  vulkan_win32.h  vulkan_xcb.h  vulkan_xlib.h  vulkan_xlib_xrandr.h
jars/: CHANGELOG.md  README.md
src/main/cpp/: AlterWrapper.cpp  YAV.cpp  jniAlter.cpp  jnijavacpp.cpp
src/main/java/: jnijavacpp.cpp
src/main/java/org/helixd2s/yavulkanmod/: Context.java  GlContext.java  GlOverride.java  Initializer.java  ReflectionUtil.kt  Resource.java  ResourceBuffer.java  ResourceCache.java  ResourceImage.java
src/main/java/org/helixd2s/yavulkanmod/alter/: Alter.java
src/main/java/org/helixd2s/yavulkanmod/alter/header/: Core.java  CreateInfo.java
src/main/java/org/helixd2s/yavulkanmod/alter/objects/: BaseObj.java  ContextObj.java  DeviceObj.java  InstanceLevelObj.java  InstanceObj.java  PipelineLayoutObj.java  ResourceObj.java  UploaderObj.java
src/main/java/org/helixd2s/yavulkanmod/ducks/texture/: ResourceTexture.java
src/main/java/org/helixd2s/yavulkanmod/ducks/utils/: IEMatrix2f.kt  IEMatrix3f.kt  IEMatrix4f.kt  IEVector4f.kt
src/main/java/org/helixd2s/yavulkanmod/mixin/: MRenderSystem.java
src/main/java/org/helixd2s/yavulkanmod/mixin/blaze3d/: MGlStateManager.java  MRenderSystem.java  MTextureUtils.java
src/main/java/org/helixd2s/yavulkanmod/mixin/gl/: MVertexBuffer.java
src/main/java/org/helixd2s/yavulkanmod/mixin/render/: MBufferBuilder.java  MBufferRenderer.java  MGameRenderer.java  MRenderSystem.java  MVertexBuffer.java  MVertexFormats.java  MWorldRenderer.java
src/main/java/org/helixd2s/yavulkanmod/mixin/texture/: MNativeImage.java  MResourceTexture.java  MSpriteAtlasTexture.java  MTextureManager.java
src/main/java/org/helixd2s/yavulkanmod/mixin/util/: MMatrix3f.kt  MMatrix4f.java  MMatrix4f.kt
src/main/java/org/helixd2s/yavulkanmod/mixin/utils/: MMatrix4f.java
src/main/java/org/helixd2s/yavulkanmod/renderer/: BaseObj.java  Core.java  Handle.java  Utils.java
src/main/java/org/helixd2s/yavulkanmod/renderer/dynamic/: AttachmentLayout.java  PipelineState.java
src/main/java/org/helixd2s/yavulkanmod/renderer/objects/: ContextObj.java  DeviceObj.java  FramebufferObj.java  InstanceObj.java  MemoryAllocatorObj.java  PipelineLayoutObj.java  PipelineObj.java  ResourceObj.java  SamplerObj.java  SwapChainObj.java
src/main/java/org/helixd2s/yavulkanmod/wrapper/: Alter.java  Cpp21.java  Std.java  jniAlter.cpp
src/main/resources/: fabric.mod.json  yavulkanmod.accesswidener  yavulkanmod.mixins.json
